<resources>
    <string name="app_name">Weather App</string>
    <string name="PlaceholderDate" translatable="false">20 April 2012, 20:08 PM</string>
    <string name="PlaceholderWeather" translatable="false">Clear Sky</string>
    <string name="Placeholder_HourValue" translatable="false">06:40</string>
    <string name="Placeholder_Temperature" translatable="false">00.0º</string>
    <string name="Placeholder_CurrentDay" translatable="false">Monday - Today</string>
    <string name="Placeholder_NextDays" translatable="false">Weekday - mmm dd</string>
    <string name="DeveloperName" translatable="false">Kaiser Desenv</string>
    <string name="ErrorString">Something went wrong</string>
    <string name="Placeholder_City" translatable="false">DHAKA, BD</string>

    <string name="LocationError_Permission">Permission not granted</string>
    <string name="Location_PermissionDeniedRationale">This app need permission to access your current location to properly operate</string>
    <string name="Network_RequestFailed">Network request failed</string>

    <string name="CurrentWeatherIcon">Current Weather Icon</string>
    <string name="reload_button">Reload Button</string>

    <string name="tempC" translatable="false">%1$d Cº</string>
    <string name="temp" translatable="false">%1$dº</string>
    <string name="lastUpdated">Last Updated At: %1$s</string>
    <string name="dayOfWeek">%1$s - Today</string>
</resources>
