<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="70dp"
        android:orientation="vertical"
        tools:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/nodeHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Placeholder_HourValue"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/tilesSpacing" />

        <ImageView
            android:id="@+id/nodeIcon"
            android:layout_width="@dimen/ImageSize"
            android:layout_height="@dimen/ImageSize"
            android:layout_gravity="center"
            android:contentDescription="@string/CurrentWeatherIcon"
            android:src="@drawable/cloud" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/tilesSpacing" />

        <TextView
            android:id="@+id/nodeTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Placeholder_Temperature" />

    </LinearLayout>
</LinearLayout>
