<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:gravity="start"
    android:orientation="horizontal"
    android:weightSum="2"
    tools:background="@color/colorPrimaryDark">

    <Space
        android:layout_width="10dp"
        android:layout_height="0dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nextDaysFullDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Placeholder_NextDays" />

        <TextView
            android:id="@+id/nextDaysDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PlaceholderWeather" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/nextDaysIcon"
            android:layout_width="@dimen/ImageSize"
            android:layout_height="65dp"
            android:contentDescription="@string/CurrentWeatherIcon"
            tools:src="@drawable/night_185" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/nextDaysMin"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/Placeholder_Temperature" />

            <TextView
                android:id="@+id/nextDaysMax"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:text="@string/Placeholder_Temperature"
                android:textColor="@color/minTempColor"/>

        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="10dp"
        android:layout_height="0dp" />
</LinearLayout>
